# Networker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake-multi-platform.yml  cmake.yml  cmaker.yml
examples/: main.c
include/: app.h  connectionPool.h  process.h  public.h  worker.h
libs/include/: buffer.h  container.h  event.h  list.h  mem.h
libs/src/: buffer.c  container.c  event.c  list.c  mem.c
my/: hello.c
protocol/: http.h  httpSender.c  request.c  response.c
src/: app.c  connectionPool.c  process.c  public.c  work.c  worker.c
tests/: test_buffer.c  test_worker.c
